# vectorhawkd

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/agent-memory/rust-systems-architect/: MEMORY.md  project_m1_stream4_registry_audit.md  project_m1_stream6_validation.md  project_m2_stream1_install.md  project_m2_stream2_gate.md  project_m3_stream1_listener.md  project_m3_stream3_cli_flow.md  project_m3_stream4_gate.md  project_shim_socket_path_duplication.md  project_stream2_api_notes.md
.github/workflows/: ci.yml  release.yml
crates/vectorhawkd-cli/: Cargo.toml
crates/vectorhawkd-cli/src/: commands_migrate.rs  commands_tests.rs  main.rs  uninstall.rs
crates/vectorhawkd-cli/src/install/: linux.rs  macos.rs  mod.rs
crates/vectorhawkd-cli/tests/: m1_mcp_sync.rs  m1_skill_install.rs  m2_install_linux.rs  m2_install_macos.rs  m3_concurrency.rs  m3_login_e2e.rs
crates/vectorhawkd-core/: Cargo.toml
crates/vectorhawkd-core/src/: app.rs  audit.rs  auth.rs  executor.rs  gateway_model.rs  importer.rs  installer.rs  lib.rs  managed.rs  mcp_governance.rs  model.rs  ollama.rs  plugin_export.rs  plugin_import.rs  policy.rs  ratings.rs  recommend.rs  registry.rs  resolver.rs  restore_journal.rs  scan.rs  scan_tests.rs  state.rs  updater.rs  validator.rs
crates/vectorhawkd-core/tests/: m1_mcpb_roundtrip.rs  m6_gateway_model.rs  m6_ollama_wiring.rs
crates/vectorhawkd-daemon/: Cargo.toml
crates/vectorhawkd-daemon/src/: auth_dispatch.rs  auth_dispatch_tests.rs  lib.rs  main.rs  oauth_listener.rs  oauth_listener_tests.rs  oauth_state.rs  oauth_state_tests.rs  refresh_loop_tests.rs  socket_dispatch.rs  socket_dispatch_tests.rs  sync_tick_tests.rs
crates/vectorhawkd-daemon/src/managed_paths/: adopt_publish.rs  adopt_publish_tests.rs  discoveries.rs  drift.rs  drift_tests.rs  links.rs  links_tests.rs  marker.rs  marker_tests.rs  migrator.rs  migrator_tests.rs  mod.rs  mod_tests.rs  paths.rs  plugin_marketplace.rs  plugin_marketplace_tests.rs  publish.rs  pusher.rs  pusher_tests.rs  rollback.rs  scanner.rs  scanner_tests.rs  takeover.rs  takeover_tests.rs
crates/vectorhawkd-daemon/src/sync/: mcp_reconciler_tests.rs  mod.rs  reconciler.rs  reconciler_tests.rs  sse_client.rs  sse_client_tests.rs
crates/vectorhawkd-daemon/tests/: m0_acceptance.rs  m0_daemon_kill.rs  m1_blocking_io_stress.rs  m1_list_changed_broadcast.rs  m1_management_tools_reachable.rs  m1_multi_shim.rs  m3_oauth_listener.rs  m5_stress_kill.rs  m5_stress_multi_shim.rs
crates/vectorhawkd-manifest/: Cargo.toml
crates/vectorhawkd-manifest/schemas/: skill_md_frontmatter.json
crates/vectorhawkd-manifest/src/: lib.rs  skill_md.rs
crates/vectorhawkd-mcp/: Cargo.toml
crates/vectorhawkd-mcp/src/: aggregator.rs  aggregator_stdio_tests.rs  backend.rs  instructions.rs  lib.rs  oauth.rs  ownership.rs  ownership_tests.rs  protocol.rs  sampling.rs  server.rs  setup.rs  stdio_process.rs  tools.rs
crates/vectorhawkd-shim/: Cargo.toml
crates/vectorhawkd-shim/src/: lib.rs  lib_tests.rs  main.rs
docs/: AUTHORING.md  install.md
examples/skills/complex/: SKILL.md  workflow.yaml
examples/skills/complex/prompts/: system.txt
examples/skills/contract-compare/: SKILL.md  workflow.yaml
examples/skills/contract-compare/prompts/: compare.txt
examples/skills/contract-compare/schemas/: input.schema.json  output.schema.json
examples/skills/medium/: SKILL.md
examples/skills/medium/prompts/: system.txt
examples/skills/minimal/: SKILL.md
scripts/: build-mcpb.sh  d1_acceptance.sh  install.sh  m0_acceptance.sh  m1_acceptance.sh  m2_acceptance.sh  m3_acceptance.sh  m4_acceptance.sh  m5_acceptance.sh  measure_daemon_rss.sh  measure_daemon_rss_under_load.sh  measure_shim_size.sh  uninstall.sh
scripts/fixtures/: release-latest.json
