[workspace]
resolver = "2"
members = [
    "crates/vectorhawkd-manifest",
    "crates/vectorhawkd-core",
    "crates/vectorhawkd-mcp",
    "crates/vectorhawkd-daemon",
    "crates/vectorhawkd-shim",
    "crates/vectorhawkd-cli",
]

[workspace.package]
version = "1.0.30"
edition = "2021"
rust-version = "1.75"
authors = ["VectorHawk"]
license = "Apache-2.0"
repository = "https://github.com/vectorhawk/vectorhawkd"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "rt", "macros", "io-util", "net", "fs", "time", "sync", "signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
camino = "1"
libc = "0.2"
semver = { version = "1", features = ["serde"] }
tempfile = "3"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
base64 = "0.22"
getrandom = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = "z"
