[package]
name = "vectorhawkd-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "vectorhawk — VectorHawk runner user CLI"

[[bin]]
name = "vectorhawk"
path = "src/main.rs"

[dependencies]
vectorhawkd-manifest = { path = "../vectorhawkd-manifest" }
vectorhawkd-core = { path = "../vectorhawkd-core" }
vectorhawkd-mcp = { path = "../vectorhawkd-mcp" }
vectorhawkd-shim = { path = "../vectorhawkd-shim" }
vectorhawkd-daemon = { path = "../vectorhawkd-daemon" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
camino.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
rusqlite.workspace = true
chrono.workspace = true
