[package]
name = "vectorhawkd-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "vectorhawk — VectorHawk runner user CLI"

[[bin]]
name = "vectorhawk"
path = "src/main.rs"

[dependencies]
vectorhawkd-manifest = { path = "../vectorhawkd-manifest" }
vectorhawkd-core = { path = "../vectorhawkd-core" }
vectorhawkd-mcp = { path = "../vectorhawkd-mcp" }
vectorhawkd-shim = { path = "../vectorhawkd-shim" }
vectorhawkd-daemon = { path = "../vectorhawkd-daemon" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
camino.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
rusqlite.workspace = true
chrono.workspace = true
dirs.workspace = true
libc.workspace = true
tar = "0.4"
flate2 = "1"
atty = "0.2"
semver.workspace = true
uuid.workspace = true

[dev-dependencies]
mockito = "1"
tempfile.workspace = true
sha2 = "0.10"
hex = "0.4"
