[package]
name = "vectorhawkd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "VectorHawk runner — core app logic (state, registry, policy, executor)"

[dependencies]
vectorhawkd-manifest = { path = "../vectorhawkd-manifest" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["blocking", "multipart"] }
rusqlite.workspace = true
async-trait.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
camino.workspace = true
semver.workspace = true
jsonschema = "0.17"
tar = "0.4"
flate2 = "1"
tempfile.workspace = true
zip.workspace = true
sha2 = "0.10"
base64.workspace = true
getrandom.workspace = true
hex = "0.4"
urlencoding = "2"
# Secure-by-default token storage: macOS Keychain, Windows Credential Manager,
# Linux Secret Service (GNOME Keyring / KWallet). Falls back to SQLite when
# the OS keystore is unavailable (headless boxes, CI, containers without D-Bus).
#
# Linux uses `sync-secret-service` (zbus, pure Rust) rather than
# `linux-native-sync-persistent` so the build doesn't require libdbus-1-dev
# and the shipped binary doesn't depend on libdbus-1.so at runtime — matters
# for static-binary distribution to a wide range of Linux installs.
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

[dev-dependencies]
mockito = "1"
