[package]
name = "vectorhawkd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "VectorHawk runner — core app logic (state, registry, policy, executor)"

[dependencies]
vectorhawkd-manifest = { path = "../vectorhawkd-manifest" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["blocking", "multipart"] }
rusqlite.workspace = true
async-trait.workspace = true
url.workspace = true
uuid.workspace = true
chrono.workspace = true
dirs.workspace = true
camino.workspace = true
semver.workspace = true
jsonschema = "0.17"
tar = "0.4"
flate2 = "1"
tempfile.workspace = true
zip.workspace = true
sha2 = "0.10"
base64.workspace = true
getrandom.workspace = true
hex = "0.4"
urlencoding = "2"

# Secure-by-default token storage:
#   - macOS: Keychain unconditionally
#   - Windows: Credential Manager unconditionally
#   - Linux: not included — Linux Secret Service backends require libdbus-1
#     at build time, and the binary then depends on libdbus-1.so at runtime
#     on every install. Linux users fall through to the SQLite-with-0600
#     storage path (same as headless macOS / CI / containers). Matches the
#     convention used by `gh`, `kubectl`, `aws cli`.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

[dev-dependencies]
mockito = "1"
