[package]
name = "vectorhawkd-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "vectorhawkd — VectorHawk runner daemon"

[[bin]]
name = "vectorhawkd"
path = "src/main.rs"

[dependencies]
vectorhawkd-manifest = { path = "../vectorhawkd-manifest" }
vectorhawkd-core = { path = "../vectorhawkd-core" }
vectorhawkd-mcp = { path = "../vectorhawkd-mcp" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
async-trait.workspace = true
dirs.workspace = true

[dev-dependencies]
serde_json.workspace = true
dirs.workspace = true
libc.workspace = true
