[package]
name = "vectorhawkd-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "vectorhawkd — VectorHawk runner daemon"

[lib]
name = "vectorhawkd_daemon"
path = "src/lib.rs"

[[bin]]
name = "vectorhawkd"
path = "src/main.rs"

[dependencies]
vectorhawkd-manifest = { path = "../vectorhawkd-manifest" }
vectorhawkd-core = { path = "../vectorhawkd-core" }
vectorhawkd-mcp = { path = "../vectorhawkd-mcp" }
camino.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
async-trait.workspace = true
dirs.workspace = true

[dev-dependencies]
serde_json.workspace = true
dirs.workspace = true
libc.workspace = true
# Used by m1_multi_shim integration test to count audit_events rows directly.
# Replaced a previous `sqlite3` CLI shellout that failed on Linux hosts
# without the CLI installed. rusqlite is already in the workspace via
# vectorhawkd-core, so this adds no extra build cost.
rusqlite.workspace = true
