[package]
name = "vectorhawkd-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "vectorhawkd — VectorHawk runner daemon"

[lib]
name = "vectorhawkd_daemon"
path = "src/lib.rs"

[[bin]]
name = "vectorhawkd"
path = "src/main.rs"

[dependencies]
vectorhawkd-manifest = { path = "../vectorhawkd-manifest" }
vectorhawkd-core = { path = "../vectorhawkd-core" }
vectorhawkd-mcp = { path = "../vectorhawkd-mcp" }
camino.workspace = true
rusqlite.workspace = true
semver.workspace = true

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
async-trait.workspace = true
dirs.workspace = true
uuid.workspace = true
futures.workspace = true
chrono.workspace = true
zip.workspace = true
flate2.workspace = true
tar.workspace = true
libc.workspace = true

# Async HTTP client for SSE streaming and installation status reporting.
reqwest.workspace = true

# F1: managed-paths reconciler — SHA-256 hashing for canonical content fingerprints.
sha2 = "0.10"
hex = "0.4"

# F2: managed-paths pusher — exclusive file lock on ~/.claude.json during
# the read-modify-write cycle so concurrent daemon pushes cannot corrupt it.
fs2 = "0.4"

# OAuth callback HTTP listener — daemon-only dep (shim does not link axum).
# axum 0.8 targets tokio 1.x, matching the workspace tokio version.
axum = { version = "0.8", default-features = false, features = ["http1", "query", "tokio"] }

[dev-dependencies]
serde_json.workspace = true
dirs.workspace = true
libc.workspace = true
tempfile.workspace = true
# Used by m1_multi_shim integration test to count audit_events rows directly.
# Replaced a previous `sqlite3` CLI shellout that failed on Linux hosts
# without the CLI installed. rusqlite is already in the workspace via
# vectorhawkd-core, so this adds no extra build cost.
rusqlite.workspace = true
# reqwest used by oauth_listener unit tests to exercise the HTTP callback endpoint.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
mockito = "1"
base64.workspace = true
