[package]
name = "vectorhawkd-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "VectorHawk runner — MCP protocol, aggregator, and Backend trait"

[dependencies]
vectorhawkd-manifest = { path = "../vectorhawkd-manifest" }
vectorhawkd-core = { path = "../vectorhawkd-core" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
bytes.workspace = true
reqwest.workspace = true
url.workspace = true
uuid.workspace = true
