[package]
name = "vectorhawkd-shim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "VectorHawk runner — stdio↔socket relay shim"

[[bin]]
name = "vectorhawkd-shim"
path = "src/main.rs"

[lib]
name = "vectorhawkd_shim"
path = "src/lib.rs"

[dependencies]
vectorhawkd-mcp = { path = "../vectorhawkd-mcp" }

tokio = { workspace = true, features = ["rt", "macros", "io-util", "net", "fs", "time", "sync", "signal"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
dirs.workspace = true
