[package]
name = "vectorhawkd-shim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "VectorHawk runner — stdio↔socket relay shim"

[lib]
name = "vectorhawkd_shim"
path = "src/lib.rs"

[dependencies]
# Explicitly opt out of the `daemon` feature to avoid pulling in rusqlite
# (~1.5 MB link weight), vectorhawkd-core, and vectorhawkd-manifest.
# The shim only needs: protocol, Backend trait, SocketBackend, EmbeddedBackend,
# aggregator (for EmbeddedBackend's BackendRegistry), and stdio_process.
# All of these are available without the `daemon` feature.
vectorhawkd-mcp = { path = "../vectorhawkd-mcp", default-features = false }

tokio = { workspace = true, features = ["rt", "macros", "io-util", "io-std", "net", "fs", "time", "sync", "signal"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
dirs.workspace = true
